# kosmos

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
app/: index.html  package-lock.json  package.json  vite.config.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 001_initial.sql  002_add_fts.sql  003_v2.sql
app/src-tauri/src/: capture.rs  db.rs  main.rs  retrieval.rs  socket.rs
app/src-tauri/src/chunker/: code.rs  fixed.rs  mod.rs  normalize.rs  paragraph.rs
app/src-tauri/src/episode/: detector.rs  mod.rs  scoring.rs
app/src-tauri/src/tokenizer/: filepath.rs  mod.rs  structural.rs  title.rs  url.rs
app/src-tauri/src/worker/: mod.rs  queue.rs  scheduler.rs  summarizer.rs
capture/: AXHelpers.swift  AppCaptureStrategy.swift  CapturePayload.swift  ChromeStrategy.swift  Deduplicator.swift  DiscordStrategy.swift  KosmosCapture.py  Log.swift  Monitor.swift  PyCharmStrategy.swift  SocketWriter.swift  SublimeTextStrategy.swift  VSCodeStrategy.swift  main.swift
