[package]
name = "kosmos-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri           = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["net", "io-util"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
