[package]
name = "kosmos-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri           = { version = "2", features = [] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
tokio           = { version = "1", features = ["full"] }
rusqlite        = { version = "0.31", features = ["bundled"] }
ulid            = "1"
sha2            = "0.10"
hex             = "0.4"
anyhow          = "1"
url             = "2"
chrono          = { version = "0.4", default-features = false, features = ["std"] }
async-trait     = "0.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
